# dl

./: .gitignore  .gitmodules  CMakeLists.txt
caffe/: CMakeLists.txt  README.md  blob_demo.cpp  cmake.sh
caffe/include/: common.hpp
caffe/include/caffe/proto/: caffe.pb.cc
caffe/test/blob/: blob_demo.cpp
caffe/test/net/: net_demo.cpp
test/: CMakeLists.txt
test/blob/: CMakeLists.txt  blob_demo.cpp
test/net/: CMakeLists.txt  net_demo.cpp
tf/cpu/: alexnet_cpu.py  mobilenet_cpu.py  resnet152_cpu.py  resnet50_cpu_layer_time.py  squeezenet_cpu.py  vgg_cpu.py
tf/gpu/: alexnet_gpu.py  mobilenet_gpu.py  resnet152_gpu.py  resnet50_gpu.py  vgg_gpu.py
tf/inception/: inception_v3_cpu.py  inception_v3_gpu.py
tf/misc/: AutoEncoder.py
tf/misc/mnist/: mnist2.py  mnist_eval.py  mnist_train.py
tf/mnist/: mnist.py  mnist_inference.py
tf/resnet/: new2.py  resnet.py
