SET(BLOB_DEMO "blob_demo")
MESSAGE(STATUS "${BLOB_DEMO} CMakeList.txt -----------------------")
MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
MESSAGE(STATUS "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")

INCLUDE_DIRECTORIES(BEFORE .)

AUX_SOURCE_DIRECTORY(. BLOB_SRC_LIST)
MESSAGE(STATUS "BLOB_SRC_LIST: ${BLOB_SRC_LIST}")

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "EXECUTABLE_OUTPUT_PATH: ${CMAKE_CURRENT_SOURCE_DIR}")
ADD_EXECUTABLE(${BLOB_DEMO} ${BLOB_SRC_LIST})
TARGET_LINK_LIBRARIES(${BLOB_DEMO} ${TEST_LIBS} ${OPENCV_LIBS})

