SET(NET_DEMO "net_demo")
MESSAGE(STATUS "${NET_DEMO} CMakeList.txt -----------------------")
MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
MESSAGE(STATUS "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")

INCLUDE_DIRECTORIES(BEFORE .)

AUX_SOURCE_DIRECTORY(. NET_SRC_LIST)
MESSAGE(STATUS "NET_SRC_LIST: ${NET_SRC_LIST}")

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build)
MESSAGE(STATUS "EXECUTABLE_OUTPUT_PATH: ${CMAKE_CURRENT_SOURCE_DIR}")
ADD_EXECUTABLE(${NET_DEMO} ${NET_SRC_LIST})
TARGET_LINK_LIBRARIES(${NET_DEMO} ${TEST_LIBS} ${OPENCV_LIBS})

